Fix declaration of override method in IdentityManagerObserverBridge

IdentityManager::OnRefreshTokenRemovedForAccount() expects as a first
parameter a "const std::string&" instead of a "const AccountInfo&",
so this patch fixes it to prevent build failures when using this API
because of OnRefreshTokenRemovedForAccount(const AccountInfo&) not
being a valid override for the virtual method declared.

Bug: 903391
Change-Id: I46cd6778240a40af6863ca7fd3b8d9a88e735fde
Reviewed-on: https://chromium-review.googlesource.com/c/1327161
Reviewed-by: Colin Blundell <blundell@chromium.org>
Commit-Queue: Mario Sanchez Prada <mario@igalia.com>
Cr-Commit-Position: refs/heads/master@{#606787}
Former-commit-id: b6586665e93e9211f934364c00eee32433027df9