services/identity/public/objc/identity_manager_observer_bridge.h
@@ -26,7 +26,7 @@
 - (void)onPrimaryAccountCleared:(const AccountInfo&)previousPrimaryAccountInfo;
 - (void)onRefreshTokenUpdatedForAccount:(const AccountInfo&)accountInfo
                                   valid:(BOOL)isValid;
-- (void)onRefreshTokenRemovedForAccount:(const AccountInfo&)accountInfo;
+- (void)onRefreshTokenRemovedForAccount:(const std::string&)accountId;
 - (void)onAccountsInCookieUpdated:(const std::vector<AccountInfo>&)accounts;
 
 @end
@@ -48,8 +48,7 @@ class IdentityManagerObserverBridge : public IdentityManager::Observer {
       const AccountInfo& previous_primary_account_info) override;
   void OnRefreshTokenUpdatedForAccount(const AccountInfo& account_info,
                                        bool is_valid) override;
-  void OnRefreshTokenRemovedForAccount(
-      const AccountInfo& account_info) override;
+  void OnRefreshTokenRemovedForAccount(const std::string& account_id) override;
   void OnAccountsInCookieUpdated(
       const std::vector<AccountInfo>& accounts) override;
 
